crates/uselesskey-pgp/tests/snapshots/snapshots_pgp__corrupt_pem_variants.snap
---
source: crates/uselesskey-pgp/tests/snapshots_pgp.rs
expression: entries
---
- variant: BadHeader
  has_begin_line: true
  has_end_line: true
  differs_from_original: true
- variant: BadFooter
  has_begin_line: true
  has_end_line: true
  differs_from_original: true
- variant: BadBase64
  has_begin_line: true
  has_end_line: true
  differs_from_original: true
- variant: ExtraBlankLine
  has_begin_line: true
  has_end_line: true
  differs_from_original: true
