crates/uselesskey-pgp/tests/snapshots/snapshots_pgp__ed25519-fingerprint-format.snap
---
source: crates/uselesskey-pgp/tests/snapshots_pgp.rs
assertion_line: 79
expression: "serde_json::json!({\n    \"length\": fp.len(), \"all_hex\": fp.chars().all(|c| c.is_ascii_hexdigit()),\n})"
---
all_hex: true
length: 40
