crates/uselesskey-pgp/tests/snapshots/snapshots_pgp__fingerprint_shape_ed25519.snap
---
source: crates/uselesskey-pgp/tests/snapshots_pgp.rs
expression: result
---
spec: ed25519
fingerprint_len: 40
fingerprint_is_hex: true
