crates/uselesskey-pgp/tests/snapshots/snapshots_pgp__fingerprint_shape_rsa2048.snap
---
source: crates/uselesskey-pgp/tests/snapshots_pgp.rs
expression: result
---
spec: rsa2048
fingerprint_len: 40
fingerprint_is_hex: true
